--- a/test1.html
+++ b/test1.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <a href="big_image.jpg">click me!<br><img src="big_image.jpg" width="100" height="100"></a>
+hihi
     </body>
 </html>
